# produtex

./: docker-compose.yml  manage.py  pyproject.toml
produtex/: pyproject.toml
produtex/src/: manage.py
produtex/src/produtex/: asgi.py  settings.py  urls.py  wsgi.py
produtex_project/: asgi.py  settings.py  urls.py  wsgi.py
produtex_project/models/: product.py  promotion.py  report_config.py  sale.py
